<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.Main"
    >

    <Button
        android:id="@+id/button_crowd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="Crowd"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v_50_percent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_h_30_percent"
        />

    <Button
        android:id="@+id/button_pit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="Pit"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_v_50_percent"
        app:layout_constraintTop_toTopOf="@+id/guideline_h_30_percent"
        />

    <Button
        android:id="@+id/button_scanner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Scanner"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v_50_percent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_crowd"
        />

    <Button
        android:id="@+id/button_drawing_map"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@android:color/holo_purple"
        android:text="Drawing"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v_50_percent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_scanner"
        />

    <Button
        android:id="@+id/button_special"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@android:color/holo_orange_light"
        android:text="Specialty"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_v_50_percent"
        app:layout_constraintTop_toBottomOf="@+id/button_pit"
        />

    <Button
        android:id="@+id/button_settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:text="Settings"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v_75_percent"
        app:layout_constraintStart_toStartOf="@+id/guideline_v_25_percent"
        app:layout_constraintTop_toBottomOf="@+id/button_drawing_map"
        />

    <Button
        android:id="@+id/button_role"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#009688"
        android:text="Provision"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="@+id/guideline_v_50_percent"
        app:layout_constraintTop_toBottomOf="@+id/button_scanner"
        />

    <TextView
        android:id="@+id/textview_scouting_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scouting_select_text"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h_30_percent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h_5_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".05"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h_30_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".1"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v_50_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".5"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v_25_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".25"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v_75_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".75"
        />
</androidx.constraintlayout.widget.ConstraintLayout>