...
      android:id="@+id/barrier3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:barrierDirection="bottom"
      app:constraint_referenced_ids="bot_center_table" />
  <Button
      android:id="@+id/loadButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/load_saved_layout"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="@+id/guideline8"
...
